# sb3topy

./: .gitignore  LICENSE  README.md  TODO.md  UPDATES.md  profile_converter.py  pyproject.toml  requirements.txt  run_gui_macos.command  run_gui_windows.cmd
.github/workflows/: tests.yml
src/engine/: __init__.py  config.py  events.py  monitors.py  operators.py  render.py  runtime.py  user_input.py  util.py
src/engine/types/: costumes.py  lists.py  pen.py  sounds.py  target.py
src/sb3topy/: main.py  project.py
src/sb3topy/config/: config.py  project.py
src/sb3topy/gui/: app.py  convert.py  examples.json  examples.py  output.py  settings.py  sidebar.py  style.py
src/sb3topy/packer/: config.txt  packer.py
src/sb3topy/parser/: ast_generator.py  linter.py  naming.py  parser.py  prototypes.py  sanitizer.py  targets.py  typing.py  variables.py
src/sb3topy/parser/specmap/: blockmap.py  codemap.py  data.json  mutations.py  specmap.py  typing.py
src/sb3topy/unpacker/: convert.py  convert_svg.py  download.py  extract.py
tests/: test_config_isolation.py  test_convert_drag_drop.py  test_engine_effects.py  test_engine_monitors.py  test_examples_gui.py  test_integration.py  test_output_gui.py  test_parser_validation.py  test_sanitization.py  test_strict_integration.py  test_svg_conversion.py
