[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sb3topy"
version = "0.1.3a0"
description = "Convert Scratch 3.0 projects into Python projects backed by a Pygame runtime."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "SirLeguan" },
    { name = "BirdLogics" },
]
dependencies = [
    "pygame>=2.0.0",
    "requests>=2.31",
    "numpy",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2",
    "tkinterdnd2>=0.4",
]
svg = [
    "CairoSVG>=2.7",
]
dev = [
    "pytest>=8",
]
all = [
    "pygame>=2.0.0",
    "requests>=2.31",
    "customtkinter>=5.2",
    "tkinterdnd2>=0.4",
    "CairoSVG>=2.7",
    "numpy",
]

[project.scripts]
sb3topy = "sb3topy.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sb3topy*", "engine*"]

[tool.setuptools.package-data]
sb3topy = [
    "config/config.json",
    "gui/examples.json",
    "packer/config.txt",
    "parser/specmap/data.json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
